# adventofcode

./: .gitignore
2019_01/: part1  part1.pl
2019_02/: part1.pl  part2.pl
2019_03/: part1.pl  part2.pl  part2.py
2019_04/: part1.py  part2.py
2019_05/: part1.py
2019_06/: part1.py  part2.py
2019_07/: part1.py
2019_08/: part1.py  part2.py
2019_09/: part1.py
2019_10/: part1.py  part2.py
2019_11/: part1.py
2019_12/: part1.py  part2.py
2019_13/: part1.py  part2-curses.py  part2.py
2019_14/: old-part1.py  part1.py  tidy.py
2019_15/: part1.py
2019_17/: part1.py  part2.py  test.pl
2019_18/: old.part1.py  part1.py
2019_20/: part2.py
2019_22/: input.txt  part1.py  part2.py  part3.py
2019_23/: part1.py
2019_24/: part1.py  part2.py
2019_25/: part1.py
2020/: day01.py  day02.py  day03.py  day04.py  day05.py  day06.py  day07.py  day08.py  day09.py  day10.py  day11.py  day12.py  day13.py  day14.py  day15.py  day16.py  day17.py  day18.py  day19.py  day2.py  day20.py  day21.py  day22.py  day23.py  day24.py  day3.py  day5.py  day9.py
2022/: day1.py  day2.py
aoc_rust_2019/: .gitignore  Cargo.toml  questions.txt  run_all.sh
aoc_rust_2019/src/: lib.rs
