[package]
name = "aoc_rust_2019"
version = "0.1.0"
authors = ["Martyn Smith <martyn@dollyfish.net.nz>"]
edition = "2018"

[profile.release]
# opt-level = 'z'
# lto = true
# codegen-units = 1
# panic = 'abort'

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.9.0"
regex = "1"
num = "0.2.1"
